--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,3 +1,10 @@
 <div class="main-container" [id]="this.htmlId">
-    <p>book works!</p>
+    <h1 class="main-title">
+        <b data-aos="fade-right" data-aos-duration="1500" data-aos-delay="400">-
+        </b>
+        <b data-aos="fade-up" data-aos-duration="1000"><i>How to
+            </i><u>Book</u></b>
+        <b data-aos="fade-left" data-aos-duration="1000" data-aos-delay="400">
+            -</b>
+    </h1>
 </div>
