--- a/src/app/book/book.component.scss
+++ b/src/app/book/book.component.scss
@@ -1,9 +1,18 @@
 .main-container {
-    height: 110vh;
+    height: 105vh;
     overflow: hidden;
     position: relative;
     text-align: center;
     color: 	#fff;
     font-family: 'Lexend Deca', sans-serif;
     background: #383e3f
+}
+
+.main-title {
+    text-align: center;
+    color: #fff;
+    font-family: 'Lexend Deca', sans-serif;
+    padding-top: 5%;
+    font-size: 3em;
+    text-shadow: 2px 2px 6px #313131;
 }
