--- a/src/app/citation/citation.component.html
+++ b/src/app/citation/citation.component.html
@@ -1,4 +1,10 @@
 <div class="main-container" [id]="this.htmlId" (scroll)="onscrollevent($event)">
-    <h1 class="citation" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-anchor-placement="center">Ceci est une
-        citation</h1>
+    <h1 class="main-title">
+        <b data-aos="fade-right" data-aos-duration="1500" data-aos-delay="400">-
+        </b>
+        <b data-aos="fade-up" data-aos-duration="1000"><i>Things
+            </i><u>To Do</u></b>
+        <b data-aos="fade-left" data-aos-duration="1000" data-aos-delay="400">
+            -</b>
+    </h1>
 </div>
