--- a/src/app/citation/citation.component.scss
+++ b/src/app/citation/citation.component.scss
@@ -1,14 +1,18 @@
 .main-container {
-    height: 110vh;
+    height: 105vh;
     overflow: hidden;
     position: relative;
     text-align: center;
     color: #686868;
     font-family: 'Lexend Deca', sans-serif;
-    background: #e4e3e3
+    background: #e4e3e3;
 }
 
-.citation{
-    position: relative;
-    bottom: 0;
+.main-title{
+    text-align: center;
+    color: #fff;
+    font-family: 'Lexend Deca', sans-serif;
+    padding-top: 5%;
+    font-size: 3em;
+    text-shadow: 2px 2px 6px #313131;
 }
