--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,6 +2,7 @@
   height: 100vh;
   overflow: hidden;
   position: relative;
+  background: #b3cad4
 }
 
 .layer {
@@ -9,7 +10,6 @@
   background-size: cover;
   width: 100%;
   height: 100vh;
-  position: fixed;
   z-index: -1;
 }
 .layer1 {
@@ -31,7 +31,7 @@
 }
 
 .logo {
-  position: fixed;
+  position: absolute;
   bottom: 50%;
   right: 50%;
   transform: translate(65%, 60%);
@@ -43,7 +43,7 @@
   font-family: 'Lexend Deca', sans-serif;
   text-shadow: 2px 2px 6px #313131;
   font-size: 3em;
-  position: fixed;
+  position: absolute;
   bottom: 15%;
   right: 50%;
   transform: translate(60%, 50%);
@@ -58,7 +58,7 @@
 }
 
 .square {
-  position: fixed;
+  position: absolute;
   height: 50vh;
   width: 50vh;
   bottom: 50%;
@@ -68,7 +68,7 @@
 
 .arrow {
   text-align: center;
-  position: fixed;
+  position: absolute;
   bottom: 3%;
   right: 50%;
   transform: translate(50%, 0%);
