--- a/src/app/ourjob/ourjob.component.html
+++ b/src/app/ourjob/ourjob.component.html
@@ -17,7 +17,8 @@
 
     <div class="content-container" data-type="parallax" data-depth="-0.1">
         <div class="content">
-            <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">Not only will you <b>discover</b> the stories
+            <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">Not only will you <b>discover</b> the
+                stories
                 of the city,
             </p>
             <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"> you will also learn about the names
